--- a/list.html
+++ b/list.html
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>列表</title>
-    <link rel="stylesheet" href="./css/列表.css">
+    <link rel="stylesheet" href="css/list.css">
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1194442_l9llewkksa.css">
     <style>
         html {
@@ -38,7 +38,7 @@
 </head>
 <body>
 <header>
-    <a href="" class="iconfont icon-fanhui"></a>
+    <a href="./index.html" class="iconfont icon-fanhui"></a>
     <span>水路综合</span>
     <a href=""></a>
 </header>
