--- a/buyno.html
+++ b/buyno.html
@@ -40,7 +40,7 @@
 </head>
 <body>
 <header>
-    <a href="" class="iconfont icon-fanhui"></a>
+    <a href="./index.html" class="iconfont icon-fanhui"></a>
     <span>购物车</span>
     <a href=""></a>
 </header>
