--- a/goods.html
+++ b/goods.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 <header>
-    <a href="" class="iconfont icon-fanhui"></a>
+    <a href="./buy.html" class="iconfont icon-fanhui"></a>
     <span>商品详情</span>
     <a href=""></a>
 </header>
