--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>首页</title>
     <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/首页.css">
+    <link rel="stylesheet" href="./css/index.css">
     <style>
         html {
             font-size: 100px; }
@@ -51,7 +51,7 @@
 </div>
 <div>
 <ul class="category">
-    <li><a href="">
+    <li><a href="./list.html">
         <div><img src="./image/img/l1.png" alt=""></div>
         <p>水路综合</p>
     </a></li>
@@ -91,9 +91,9 @@
 </div>
 <footer>
     <a href="" class="hot" ><img src="./image/img/sy.png " alt="">首页</a>
-    <a href=""><img src="./image/img/store.png " alt="">商城</a>
+    <a href="./list.html"><img src="./image/img/store.png " alt="">商城</a>
     <a href=""><img src="./image/img/rz.png " alt="">入驻</a>
-    <a href=""><img src="./image/img/personal.png " alt="">订单</a>
+    <a href="./buy.html"><img src="./image/img/personal.png " alt="">订单</a>
     <a href=""><img src="./image/img/order.png " alt="">我的</a>
 </footer>
 </body>
