--- a/list.html
+++ b/list.html
@@ -59,7 +59,7 @@
 <section class="list">
     <ul class="scroll">
         <li class="listItem">
-            <a href=""><img src="./image/img/s1.png" alt="">
+            <a href="./goods.html"><img src="./image/img/s1.png" alt="">
                 <div class="introduce">
                     <div class="first">龙头维修</div>
                     <div class="second">
