--- a/buy.html
+++ b/buy.html
@@ -56,7 +56,7 @@
                 <a href=""><img src="./image/img/yixuan.png" alt=""></a>
             </div>
             <div class="name">
-                <a href="">
+                <a href="./goods.html">
                     <img src="./image/img/goods.jpg" alt="">
                     <div class="M">
                         <h4>潜水艇高端龙头</h4>
@@ -75,7 +75,7 @@
                 <a href=""><img src="./image/img/weixuan.png" alt=""></a>
             </div>
             <div class="name">
-                <a href="">
+                <a href="./goods.html">
                     <img src="./image/img/goods.jpg" alt="">
                     <div class="M">
                         <h4>潜水艇高端龙头</h4>
@@ -94,7 +94,7 @@
                 <a href=""><img src="./image/img/weixuan.png" alt=""></a>
             </div>
             <div class="name">
-                <a href="">
+                <a href="./goods.html">
                     <img src="./image/img/goods.jpg" alt="">
                     <div class="M">
                         <h4>潜水艇高端龙头</h4>
@@ -113,7 +113,7 @@
                 <a href=""><img src="./image/img/weixuan.png" alt=""></a>
             </div>
             <div class="name">
-                <a href="">
+                <a href="./goods.html">
                     <img src="./image/img/goods.jpg" alt="">
                     <div class="M">
                         <h4>潜水艇高端龙头</h4>
@@ -132,7 +132,7 @@
                 <a href=""><img src="./image/img/weixuan.png" alt=""></a>
             </div>
             <div class="name">
-                <a href="">
+                <a href="./goods.html">
                     <img src="./image/img/goods.jpg" alt="">
                     <div class="M">
                         <h4>潜水艇高端龙头</h4>
@@ -151,7 +151,7 @@
                 <a href=""><img src="./image/img/weixuan.png" alt=""></a>
             </div>
             <div class="name">
-                <a href="">
+                <a href="./goods.html">
                     <img src="./image/img/goods.jpg" alt="">
                     <div class="M">
                         <h4>潜水艇高端龙头</h4>
