--- a/goods.html
+++ b/goods.html
@@ -44,58 +44,119 @@
     <a href=""></a>
 </header>
 <div class="img" ><img src="./image/img/图层2.png" alt=""></div>
-<div class="neirong" >
-    <div class="details">
-    <div class="first">
-        <h3>皮毛服饰清洗保洁</h3>
+<div class="detail">
+    <h1>皮毛服饰清洗保养</h1>
+    <p>服饰内外污渍清洗，去霉杀菌，不包含补色补伤服饰内外污渍清洗去霉杀菌，不包含补色补伤</p>
+    <div class="tag">
+        <div class="tatal">60元一件</div>
+        <div class="ding">定金</div>
+        <div class="shang">上门服务</div>
     </div>
-    <div class="second">
-        <p>服饰内外污渍清洗，去霉杀菌，不包含补色补伤服饰内外污渍清洗去霉杀菌，不包含补色补伤</p>
+    <div class="sell">月售 <b>278</b></div>
+    <div class="quan">
+        <img src="./image/img/圆角矩形1.jpg" alt="">
+        <a href=""><b>领券</b></a>
+        <div class="manjian">满500减50</div>
     </div>
-    <div class="third">
-        <span>60元／件</span>
-        <span>定金</span>
-        <span>上门服务</span>
-        <span class="dian">月售   998</span>
+    <div class="bao">
+        <span>无额外收费 </span><span>爽约包赔</span><span>不满意重新服务</span>
     </div>
-    <div class="fourth">
-        <img src="./image/img/圆角矩形1.png" alt="">
-        <span>领劵</span>
-        <span>满300减99</span>
-    </div>
-    <div class="fifth">
-        <span class="dian">无额外收费</span>
-        <span class="dian">爽约包赔</span>
-        <span class="dian">不满意重新服务</span>
-    </div>
-    <div class="sixth">
-        <span>用户评价</span>
-        <span class="iconfont icon-you">查看全部</span>
-    </div>
-    </div>
-    <div class="zong">
-<!--        <div class="headimg">-->
-<!--           <img src="./image/img/c6cc6b88b69be5e75a8e676921f08c38679656f625974-mRgjUN_fw658拷贝.png" alt="">-->
-<!--        </div>-->
-    <div class="comment" >
-        <ul>
-            <li>
-                <div class="headimg">
-                    <img src="./image/img/c6cc6b88b69be5e75a8e676921f08c38679656f625974-mRgjUN_fw658拷贝.png" alt="">
+    <div class="assess">
+        <div class="title">
+            <h1>用户<b>评价</b></h1>
+            <p>查看全部<span class="iconfont icon-xiangyou"></span></p>
+        </div>
+        <li class="nav">
+            <div class="navleft">
+                <img src="./image/img/c6cc6b88b69be5e75a8e676921f08c38679656f625974-mRgjUN_fw658拷贝.jpg" alt="">
+            </div>
+            <div class="navright">
+                <div class="user">
+                    <h1>用户名<span class="iconfont"></span></h1>
+                    <span>2018-06-08</span>
                 </div>
-                <div class="luansile" >
-            <div><span>左翌尧</span>
-                <span>2019-1-1</span></div>
-            <div>服务专业，商家细节做得特别好，准时到达</div>
-            <div>北京  海淀区  四双跑步鞋清理</div>
+                <p>服务专业，商家细节做得特别好，准时到达</p>
+                <div class="area">
+                    <span>北京</span><span>海淀区</span><span>四双跑步鞋清理</span>
                 </div>
-          </li>
-          <li></li>
-          <li></li>
-    </ul>
-    </div>
+            </div>
+        </li>
+        <li class="nav">
+            <div class="navleft">
+                <img src="./image/img/c6cc6b88b69be5e75a8e676921f08c38679656f625974-mRgjUN_fw658拷贝.jpg" alt="">
+            </div>
+            <div class="navright">
+                <div class="user">
+                    <h1>用户名<span class="iconfont"></span></h1>
+                    <span>2018-06-08</span>
+                </div>
+                <p>服务专业，商家细节做得特别好，准时到达</p>
+                <div class="area">
+                    <span>北京</span><span>海淀区</span><span>四双跑步鞋清理</span>
+                </div>
+                <a href=""><img src="./image/img/goods.png" alt=""></a>
+            </div>
+        </li>
+        <div class="detail2">商品<b>详情</b>
+            <img src="./image/img/goods.png" alt="">
+        </div>
+        <div class="tui">
+            <div class="title">相似推荐</div>
+            <ul class="list">
+                <li>
+                    <a href="">
+                        <img src="./image/img/goods.png" alt="">
+                        <p>潜水艇高端龙头</p>
+                        <h1>60元</h1>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./image/img/goods.png" alt="">
+                        <p>潜水艇高端龙头</p>
+                        <h1>60元</h1>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./image/img/goods.png" alt="">
+                        <p>潜水艇高端龙头</p>
+                        <h1>60元</h1>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./image/img/goods.png" alt="">
+                        <p>潜水艇高端龙头</p>
+                        <h1>60元</h1>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./image/img/goods.png" alt="">
+                        <p>潜水艇高端龙头</p>
+                        <h1>60元</h1>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./image/img/goods.png" alt="">
+                        <p>潜水艇高端龙头</p>
+                        <h1>60元</h1>
+                    </a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
+<footer>
+    <a href="">
+        <div><img src="./img/形状1.png" alt=""><p>店铺</p></div>
+        <div><img src="./img/形状2.png" alt=""><p>联系商家</p></div>
+        <span>加入购物车</span>
+        <span class="a">立即下单</span>
+    </a>
+</footer>
 
 
 </body>
