--- a/goods.html
+++ b/goods.html
@@ -150,13 +150,22 @@
     </div>
 </div>
 <footer>
-    <a href="">
-        <div><img src="./img/形状1.png" alt=""><p>店铺</p></div>
-        <div><img src="./img/形状2.png" alt=""><p>联系商家</p></div>
-        <span>加入购物车</span>
-        <span class="a">立即下单</span>
-    </a>
+    <div class="footer-left">
+        <a href="" style="opacity: 1;" class="footer-left-first">
+            <img src="image/img/008.png" alt="">
+            店铺
+        </a>
+        <a href="" class="footer-left-second">
+            <img src="image/img/007.png" alt="">
+            联系商家
+        </a>
+    </div>
+    <div class="footer-right">
+        <a href="./buy.html"><div class="footer-right-first">加入购物车</div></a>
+        <a href=""><div class="footer-right-second">立即下单</div></a>
+    </div>
 </footer>
+
 
 
 </body>
