--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <a href="" class="hot" ><img src="./image/img/sy.png " alt="">首页</a>
     <a href="./list.html"><img src="./image/img/store.png " alt="">商城</a>
     <a href=""><img src="./image/img/rz.png " alt="">入驻</a>
-    <a href="./buy.html"><img src="./image/img/personal.png " alt="">订单</a>
+    <a href="./buyno.html"><img src="./image/img/personal.png " alt="">订单</a>
     <a href=""><img src="./image/img/order.png " alt="">我的</a>
 </footer>
 </body>
