--- a/buy.html
+++ b/buy.html
@@ -177,7 +177,7 @@
             <span class="hot">运费￥20  已优惠￥20</span>
         </div>
         <div class="right">
-            <a href=""><div class="pict">
+            <a href="./fukuai.html"><div class="pict">
                 <div>结算</div>
             </div>
             </a>
@@ -185,6 +185,5 @@
 
     </div>
 </div>
-
 </body>
 </html>
